--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,9 @@
 
   <!-- Google login -->
   <meta name="google-signin-client_id"
-    content="476849697961-mp93cmobo60tggji6cl0gts0uqt42tdm.apps.googleusercontent.com">
+  content="1020835525565-4v8u5jo2lsd0p5rlusulog9iet5eit2d.apps.googleusercontent.com">
+  <!-- <meta name="google-signin-client_id"
+    content="476849697961-mp93cmobo60tggji6cl0gts0uqt42tdm.apps.googleusercontent.com"> -->
 
   <!-- Open new Tab -->
   <script src="script.js" type="application/javascript"></script>
@@ -92,15 +94,25 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyBZLp0GKlwhrFBjRIEELxCvyVGj49_1VYw",
-      authDomain: "myallapp-f9c13.firebaseapp.com",
-      databaseURL: "https://myallapp-f9c13.firebaseio.com",
-      projectId: "myallapp-f9c13",
-      storageBucket: "myallapp-f9c13.appspot.com",
-      messagingSenderId: "476849697961",
-      appId: "1:476849697961:web:c6f7df346b69ce674f65b8"
+      apiKey: "AIzaSyACheE2MGW-2eHi5tJ_FXQYzPJNAdCAEJo",
+      authDomain: "deenulqayyim-394d2.firebaseapp.com",
+      projectId: "deenulqayyim-394d2",
+      storageBucket: "deenulqayyim-394d2.appspot.com",
+      messagingSenderId: "1020835525565",
+      appId: "1:1020835525565:web:bb861f55a88831f09c58d4",
+      measurementId: "G-0NB0Z0HWFG"
     };
+    // const firebaseConfig = {
+    //   apiKey: "AIzaSyBZLp0GKlwhrFBjRIEELxCvyVGj49_1VYw",
+    //   authDomain: "myallapp-f9c13.firebaseapp.com",
+    //   databaseURL: "https://myallapp-f9c13.firebaseio.com",
+    //   projectId: "myallapp-f9c13",
+    //   storageBucket: "myallapp-f9c13.appspot.com",
+    //   messagingSenderId: "476849697961",
+    //   appId: "1:476849697961:web:c6f7df346b69ce674f65b8"
+    // };
 
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
